<?xml version="1.0"?>
<package>
  <name>system_launch</name>
  <version>0.0.0</version>
  <description>The system_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hntea@todo.todo">hntea</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/system_launch</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>asr_brige</build_depend>
  <build_depend>audio_capture</build_depend>
  <build_depend>audio_fectures</build_depend>
  <build_depend>audio_fft_factory</build_depend>
  <build_depend>audio_filter</build_depend>
  <build_depend>audio_msgs</build_depend>
  <build_depend>speech_vad</build_depend>
  <build_depend>training_tools</build_depend>
  <run_depend>asr_brige</run_depend>
  <run_depend>audio_capture</run_depend>
  <run_depend>audio_fectures</run_depend>
  <run_depend>audio_fft_factory</run_depend>
  <run_depend>audio_filter</run_depend>
  <run_depend>audio_msgs</run_depend>
  <run_depend>speech_vad</run_depend>
  <run_depend>training_tools</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>